--- a/practicals/practical1.html
+++ b/practicals/practical1.html
@@ -38,11 +38,11 @@
 
     <h2 style="text-align: center">VS CODE offline editor</h2>
 
-   <center> <img src="./assets/Screenshot at 2021-08-15 10-11-07.jpg.jpg" style="width: 80%; height: 50%;" /></center>
+   <center> <img src="../assets/Screenshot at 2021-08-15 10-11-07.jpg" style="width: 80%; height: 50%;" /></center>
 
     <h2 style="text-align: center">SANDBOX CODEPEN onlie editor</h2>
 
-   <center><img src="./assets/Screenshot at 2021-08-15 11-02-51.jpg.jpg" style="width: 80%; height: 50%;" /></center> 
+   <center><img src="../assets/Screenshot at 2021-08-15 11-02-51.jpg" style="width: 80%; height: 50%;" /></center> 
 
   </body>
 
