--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
-<!DOCTYPE html>
+><!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <h1>this is first website</h1>
-    <p>create a webpage including html basic skeleton using offline html editor and online sandbox environment.<a title="link to practical-1" href="./practicals/practical1.html" target="_blank">click to view practical1</a> </p>
-  </body>
+</head>
+<body style="background-color:peachpuff">
+    <h2 style="background-color: lightblue;color: maroon;text-align: center;">Welcome To Live Practical Book</h2>
+    <p style="color: maroon;">This is Live Practical Book for the subject Full Stack Web Development-1. In this book , we are performing 
+        all the practicals related to Fron-end web Development including topics from HTML, CSS, JS, Bootstrap.
+        This book is hosted on Github cloud platform . You can view all the practicals from this book.
+    </p>
+    <u><h1 style="color: navy;text-align: center;">List Of Practicals</h1></u>
+    <br/>
+    <p>1. Create a web page including HTML basic skeleton using Offline HTML Editor and online Sandbox Environment.
+          <a title="Link to Practical -1" href="./practicals/practical1.html" style="background-color: palegreen;" target="_blank">Click to view Practical-1</a>
+    </p>
+    <hr color="grey" size="2" />
+    <p>2. Create a web page showing a basic html structure using character entities and span tag.
+        <a title="Link to Practical -2" href="./practicals/practical2.html" style="background-color: palegreen;" target="_blank">Click to view Practical-2</a>
+    </p>
+    <hr color="grey" size="2" />
+    <p>3. Live your first Web-Page on Git-Hub.
+        <a title="Link to Practical -3" href="./practicals/practical3.html" style="background-color: palegreen;" target="_blank">Click to view Practical-3</a>
+    </p>
+    <hr color="grey" size="2" />
+    <p>4. Create a website having list of all practical and their individual practical page links.
+        <a title="Link to Practical -4" href="./practicals/practical-4.html" style="background-color: palegreen;" target="_blank">Click to view Practical-4</a>
+    </p>
+    <hr color="grey" size="2" />
+    <p>5. Create a Web-Page showing the use of Image-Map in the Web Application.
+        <a title="Link to Practical -5" href="./practicals/practical-5.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-5</a>
+    </p>
+    <hr color="grey" size="2" />
+</body>
 </html>
