--- a/practicals/practical3.html
+++ b/practicals/practical3.html
@@ -4,29 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment-3</title>
+    <title>Practical 3</title>
 </head>
 <body>
-    <h1 >FULL STACK WEB DEVELOPEMENT</h1>
-
-    <h2>About Fullstack</h2>
-
-    <p>
-
-      Full stack development: It refers to the development of both front
-
-      end(client side) and back end(server side) portions of web application.
-
-      Full stack web Developers: Full stack web developers have the ability to
-
-      design complete web application and websites. They work on the frontend,
-
-      backend, database and debugging of web application or websites.
-
+    <h2 style="color: red;">Practical - 3 : Live your first web-page on git-hub</h2>
+    <br/>
+    <h2 style="background-color: aquamarine; color: black;text-align: center;">Welcome To Fullstack Course</h2>
+    </n>
+    <h2 style="color: coral;">About Course</h2>
+    </n>
+    <p style="font-size: 21px;">
+        About Fullstack Web Development
     </p>
-    <h2>Output</h2>
-    <h2 style="text-align: center">Live page on github</h2>
-    
-
+    <br/>
+    <h2 style="color: coral;">OUTPUT</h2>
+    <center><img src="" width="1000" height="400" border="2px" /></center>
 </body>
 </html>
