--- a/practicals/practical2.html
+++ b/practicals/practical2.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Assignment-2</title>
+    <title>Practical-2</title>
 
   </head>
 
