--- a/practicals/practical3.html
+++ b/practicals/practical3.html
@@ -13,9 +13,19 @@
     </n>
     <h2 style="color: coral;">About Course</h2>
     </n>
-    <p style="font-size: 21px;">
-        About Fullstack Web Development
-    </p>
+    <p>
+
+        Full stack development: It refers to the development of both front
+  
+        end(client side) and back end(server side) portions of web application.
+  
+        Full stack web Developers: Full stack web developers have the ability to
+  
+        design complete web application and websites. They work on the frontend,
+  
+        backend, database and debugging of web application or websites.
+  
+      </p>
     <br/>
     <h2 style="color: coral;">OUTPUT</h2>
     <center><img src="" width="1000" height="400" border="2px" /></center>
