--- a/practicals/practical3.html
+++ b/practicals/practical3.html
@@ -28,6 +28,6 @@
     </p>
     <br/>
     <h2 style="color: coral;">OUTPUT</h2>
-    <center><img src="" width="1000" height="400" border="2px" /></center>
+    <center><img src="../assets/Capture.PNG" width="1000" height="400" border="2px" /></center>
 </body>
 </html>
