--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </p>
     <hr color="grey" size="2" />
     <p>6. Create a Card Layout using CSS layout properties.
-        <a title="Link to Practical -6" href="" style="background-color:palegreen ;" target="_blank">Click to view Practical-6</a>
+        <a title="Link to Practical -6" href="./practicals/practical6.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-6</a>
     </p>
     <hr color="grey" size="2" />
     <p>7. Create a Web Page Layout using div tags.
