--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </p>
     <hr color="grey" size="2" />
     <p>8. Create a Web Page having Fixed Navigation Bar with the given content.
-        <a title="Link to Practical -8" href="" style="background-color:palegreen ;" target="_blank">Click to view Practical-8</a>
+        <a title="Link to Practical -8" href="./practicals/practical8.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-8</a>
     </p>
     <hr color="grey" size="2" />
 </body>
