--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
         <a title="Link to Practical -8" href="./practicals/practical8.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-8</a>
     </p>
     <hr color="grey" size="2" />
+    <p>9. create a Responsive web layout with responsive navigation bar.
+        <a title="Link to Practical -9" href="./practicals/practical9.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-9</a>
+    </p>
+    <hr color="grey" size="2" />
+    <p>10. create a Responsive Side-bar Navigation menu.
+        <a title="Link to Practical -10" href="./practicals/practical10.html" style="background-color:palegreen ;" target="_blank">Click to view Practical-10</a>
+    </p>
+    <hr color="grey" size="2" />
 </body>
 </html>
