--- a/practicals/jslogo.html
+++ b/practicals/jslogo.html
@@ -15,8 +15,12 @@
          object-orientation, and first-class functions.
         Alongside HTML and CSS, JavaScript is one of the core technologies of the 
         World Wide Web.Over 97% of websites use it client-side for web page behavior,
-        often incorporating third-party libraries.[13] Most web browsers have a dedicated 
+        often incorporating third-party libraries. Most web browsers have a dedicated 
         JavaScript engine to execute the code on the user's device.
+        As a multi-paradigm language, JavaScript supports event-driven, functional, and 
+        imperative programming styles. It has application programming interfaces (APIs) 
+        for working with text, dates, regular expressions, standard data structures, and 
+        the Document Object Model (DOM).
         </p>
 </body>
 </html>
